# rla

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md
.reuse/: dep5
include/rla/: Bitmap.hpp  BitmapColor.hpp  BitmapDepth.hpp  BitmapRow.hpp  BitmapRowView.hpp  BitmapView.hpp  ConsoleAtlasFactory.hpp  Font.hpp  Image.hpp  ImageRow.hpp  MutableBitmap.hpp  MutableBitmapRow.hpp  MutableBitmapView.hpp  Png.hpp  PngColor.hpp  PngException.hpp  bitmap_exception.hpp  bitmap_types.hpp  color_conversion.hpp  console_atlas.hpp  console_atlas_layout.hpp  console_face.hpp  font_exception.hpp  types.hpp
include/rla/detail/: Bitmap.inl  Bitmap_Row.inl  Bitmap_Row_View.inl  Bitmap_View.inl  color_conversion.inl
src/: Bitmap.cpp  BitmapRow.cpp  BitmapRowView.cpp  BitmapView.cpp  Bitmap_Row.cpp  Bitmap_Row_View.cpp  Bitmap_View.cpp  CMakeLists.txt  ConsoleAtlasFactory.cpp  Font.cpp  Image.cpp  ImageRow.cpp  Image_Row.cpp  MutableBitmap.cpp  MutableBitmapRow.cpp  MutableBitmapRowView.cpp  MutableBitmapView.cpp  Png.cpp  PngException.cpp  bitmap_exception.cpp  console_atlas.cpp  console_atlas_source_key.hpp  font_exception.cpp  libpng_ext.cpp  libpng_ext.hpp  pngw_ext.cpp  pngw_ext.hpp  pngw_impl.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  color_conversion_tests.cpp  main.cpp  static_bitmap_func_tests.cpp
